# RoboticsProgrammingLaboratory

./: GRADES.txt  README.md  README_Assignment2.txt~  README_Assignment3.txt~  README_Assignment4.txt  README_Assignment4.txt~
localization/: CMakeLists.txt  package.xml
localization/data/: testenvironment.yaml
localization/include/localization/: localization.h  localization_parameters.h  map_matching.h  motion_update.h  motion_update_parameters.h  odometry_transform_node.h  parameters.h  particle_filter_localization.h  particles_publisher.h  publisher.h  random_sampling.h  resample.h  sample_odometry_motion_model.h  sensor_update.h  stochastic_universal_sampling.h  weighted_particle.h
localization/launch/: localization.launch
localization/parameters/: localization.yaml
localization/src/: localization_node.cpp  map_matching.cpp  odometry_transform_node.cpp  particle_filter_localization.cpp  particles_publisher.cpp  random_sampling.cpp  sample_odometry_motion_model.cpp  stochastic_universal_sampling.cpp
object_recognition/: CMakeLists.txt  package.xml
object_recognition/include/object_recognition/: assigned_descriptors.h  cloud_filtering.h  cloud_filtering_parameters.h  cloud_segmentation.h  cloud_segmentation_parameters.h  marker_color.h  marker_generator.h  model_library.h  object_recognition.h  parameters.h  spin_image.h  spin_image_parameters.h
object_recognition/launch/: object_recognition.launch
object_recognition/parameters/: object_recognition_parameters.yaml
object_recognition/src/: cloud_filtering.cpp  cloud_segmentation.cpp  marker_generator.cpp  model_library.cpp  object_recognition.cpp  spin_image.cpp
roboscoop/roboscoop_lib/EIFGENs/roboscoop/: precomp.eif  project.epr
roboscoop/roboscoop_lib/EIFGENs/roboscoop/W_code/: Makefile  Makefile.SH  TRANSLAT
roboscoop/roboscoop_ros/launch/: search_and_rescue.launch  wireless_thymio.launch
roboscoop/thymio_app/: app.e  localization.e  path_planning.e  thymio_app.ecf
roboscoop/thymio_app/EIFGENs/thymio_app/: editors_1  project.epr
roboscoop/thymio_app/EIFGENs/thymio_app/W_code/: Makefile  Makefile.SH  TRANSLAT  thymio_app.melted
roboscoop/thymio_app/behaviours/: go_to_goal_behaviour.e  mission_planner_behaviour.e
roboscoop/thymio_app/communication/: boolean_listener.e  boolean_msg.e  boolean_signaler.e  float_32_listener.e  float_32_signaler.e  object_recognition_communicator.e  path_planner_communicator.e  thymio_topics.e
roboscoop/thymio_app/controllers/: go_to_goal_controller.e  light_controller.e  localization_controller.e  mission_planner_controller.e  obstacle_avoidance_controller.e  path_planning_controller.e
roboscoop/thymio_app/controllers/pid/: pid_controller.e  pid_controller_parameters.e
roboscoop/thymio_app/graph/graph_models/: grid_builder.e  grid_connectivity.e
roboscoop/thymio_app/graph/graph_search/: a_star_search.e  comparable_node.e  euclidian_cost.e  graph_search.e
roboscoop/thymio_app/parameter_files/: general_parameter_file  go_to_goal_parameter_file~  localization_parameter_file  obstacle_avoidance_parameter_file  parameter_file_paths  path_planning_parameter_file
roboscoop/thymio_app/parameters/: go_to_goal_parameters.e  localization_parameters.e  mission_parameters.e  obstacle_avoidance_parameters.e  parameter_file_paths.e  parameters.e  path_planning_parameters.e
roboscoop/thymio_app/parsers/: go_to_goal_parser.e  localization_parser.e  mission_parser.e  obstacle_avoidance_parser.e  parameter_file_paths_parser.e  path_planning_parser.e
roboscoop/thymio_app/robot/: thymio_robot.e
roboscoop/thymio_app/sensor/: thymio_range_group.e
roboscoop/thymio_app/signalers/: go_to_goal_signaler.e  obstacle_avoidance_signaler.e  path_planning_signaler.e  robot_signaler.e
roboscoop/thymio_app/util/: obstacle_avoidance_util.e
(+1875 files in other folders)
